--- a/index.html
+++ b/index.html
@@ -10,26 +10,41 @@
   </head>
   <body>
     <div class="icons">
-      <a href="">
-        <div class="layer" style="color:  #1877F2;">
-          <span></span><span></span><span></span><span><i class='bx bxl-facebook' style="color: inherit;"></i></span>
+      <a href="" style="color:  #1877F2;">
+        <div class="layer" >
+          <span></span><span></span><span></span><span><i class='bx bxl-facebook'></i></span>
+        </div>
+        <div class="layer_name">
+          <span class="name facebook">faceBook</span>
         </div>
       </a>
-      <a href="">
-        <div class="layer"style="color: #1DA1F2;" >
-          <span></span><span></span><span></span><span><i class='bx bxl-twitter' style="color: #1DA1F2;" ></i></span>
+      <a href="" style="color: #1DA1F2;">
+        <div class="layer" >
+          <span></span><span></span><span></span><span><i class='bx bxl-twitter'  ></i></span>
+        </div>
+        <div class="layer_name">
+          <span class="name">Twitter</span>
         </div>
       </a>
-      <a href="">
-        <div class="layer"  style="color: #0077B5;">
-          <span></span><span></span><span></span><span><i class='bx bxl-linkedin' style="color: #0077B5;"></i></span>
+      <a href="" style="color: #0077B5;">
+        <div class="layer" >
+          <span></span><span></span><span></span><span><i class='bx bxl-linkedin' ></i></span>
+        </div>
+        <div class="layer_name">
+          <span class="name">Linkdin</span>
         </div>
       </a>
-      <a href="">
-        <div class="layer"  style="color: #181717;">
-          <span></span><span></span><span></span><span><i class='bx bxl-github' style="color: #181717;" ></i></span>
+      <a href="" style="color: #181717;">
+        <div class="layer">
+          <span></span><span></span><span></span><span><i class='bx bxl-github'  ></i></span>
+        </div>
+        <div class="layer_name">
+          <span class="name">GitHub</span>
         </div>
       </a>
+      <div class="ahmadreza"> 
+        <p>AHMADREZA NIKZAD</p>
+      </div>
     </div>
     <script src="./index.js"></script>
   </body>
